Detrend Head data

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,10 @@
-Package: MovementSync
+Package: movementsync
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Analysis and Visualisation of Synchronisation of Music Onset and Video Data
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: person("Tuomas", "Eerola", email = "tuomas.eerola@durham.ac.uk", role = c("aut", "cre"))
+Description: This package helps to calculate and visualise music onset and video data.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
