--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(autolayer,Metre)
 S3method(autolayer,OnsetsSelected)
 S3method(autoplot,Metre)
 S3method(autoplot,OnsetsSelected)
+S3method(autoplot,PeriodicityView)
 S3method(autoplot,View)
 S3method(plot,Metre)
 S3method(plot,OnsetsSelected)
@@ -14,15 +15,18 @@ S3method(summary,OnsetsSelected)
 S3method(summary,Recording)
 S3method(summary,View)
 export(apply_filter)
+export(apply_filter_sgolay)
 export(autolayer)
 export(autoplot)
 export(get_duration_annotation_data)
 export(get_metre_data)
 export(get_onsets_selected_data)
 export(get_processed_view)
+export(get_raw_optflow_view)
 export(get_raw_view)
 export(get_raw_views)
 export(get_recording)
+export(periodicity)
 export(xlim_duration)
 export(xy_plot)
 importFrom(ggplot2,autolayer)
