Added periodicity plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(autoplot,View)
 S3method(plot,Metre)
 S3method(plot,OnsetsSelected)
 S3method(plot,View)
+S3method(subset,View)
 S3method(summary,Metre)
 S3method(summary,OnsetsSelected)
 S3method(summary,Recording)
@@ -18,6 +19,8 @@ export(apply_filter)
 export(apply_filter_sgolay)
 export(autolayer)
 export(autoplot)
+export(distribution_dp)
+export(get_data_points)
 export(get_duration_annotation_data)
 export(get_metre_data)
 export(get_onsets_selected_data)
@@ -27,7 +30,8 @@ export(get_raw_view)
 export(get_raw_views)
 export(get_recording)
 export(periodicity)
+export(plot_xy)
+export(velocity_dp)
 export(xlim_duration)
-export(xy_plot)
 importFrom(ggplot2,autolayer)
 importFrom(ggplot2,autoplot)
