--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,17 @@
 S3method(autolayer,Duration)
 S3method(autolayer,Metre)
 S3method(autolayer,OnsetsSelected)
+S3method(autoplot,GrangerTime)
 S3method(autoplot,Metre)
 S3method(autoplot,OnsetsSelected)
 S3method(autoplot,PeriodicityView)
+S3method(autoplot,SplicedView)
 S3method(autoplot,View)
 S3method(plot,Metre)
 S3method(plot,OnsetsSelected)
 S3method(plot,View)
+S3method(splice_time,View)
+S3method(splice_time,list)
 S3method(subset,View)
 S3method(summary,Metre)
 S3method(summary,OnsetsSelected)
@@ -22,6 +26,7 @@ export(autoplot)
 export(distribution_dp)
 export(get_data_points)
 export(get_duration_annotation_data)
+export(get_joined_view)
 export(get_metre_data)
 export(get_onsets_selected_data)
 export(get_processed_view)
@@ -29,8 +34,13 @@ export(get_raw_optflow_view)
 export(get_raw_view)
 export(get_raw_views)
 export(get_recording)
+export(get_spliced_view)
+export(granger_test)
+export(motion_gram)
 export(periodicity)
-export(plot_xy)
+export(plot_history_xy)
+export(specgram_plot)
+export(splice_time)
 export(velocity_dp)
 export(xlim_duration)
 importFrom(ggplot2,autolayer)
