Added igraph script

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,11 @@ S3method(autoplot,OnsetsSelected)
 S3method(autoplot,PeriodicityView)
 S3method(autoplot,SplicedView)
 S3method(autoplot,View)
+S3method(plot,Duration)
 S3method(plot,Metre)
 S3method(plot,OnsetsSelected)
 S3method(plot,View)
+S3method(splice_time,Duration)
 S3method(splice_time,View)
 S3method(splice_time,list)
 S3method(subset,View)
@@ -26,6 +28,7 @@ export(autoplot)
 export(distribution_dp)
 export(get_data_points)
 export(get_duration_annotation_data)
+export(get_filtered_views)
 export(get_joined_view)
 export(get_metre_data)
 export(get_onsets_selected_data)
