--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Analysis and Visualisation of Synchronisation of Music Onset and Video Data
 Version: 0.1.0
 Author: person("Tuomas", "Eerola", email = "tuomas.eerola@durham.ac.uk", role = c("aut", "cre"))
-Description: This package helps to calculate and visualise music onset and video data.
+Description: This package helps to calculate and visualise video and audio data from an ensemble of musical players.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -12,7 +12,8 @@ Imports:
     zoo,
     dplyr,
     tidyr,
-    grid,
+    hms,
     gridExtra,
+    ggtext,
     ggplot2
 RoxygenNote: 7.1.1
