Added wavelet plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,15 +16,20 @@ S3method(plot,View)
 S3method(splice_time,Duration)
 S3method(splice_time,View)
 S3method(splice_time,list)
+S3method(split,SplicedView)
 S3method(subset,View)
+S3method(summary,Duration)
 S3method(summary,Metre)
 S3method(summary,OnsetsSelected)
 S3method(summary,Recording)
 S3method(summary,View)
+export(analyze_coherency)
+export(analyze_wavelet)
 export(apply_filter)
 export(apply_filter_sgolay)
 export(autolayer)
 export(autoplot)
+export(condGranger)
 export(distribution_dp)
 export(get_data_points)
 export(get_duration_annotation_data)
@@ -39,9 +44,15 @@ export(get_raw_views)
 export(get_recording)
 export(get_spliced_view)
 export(granger_test)
+export(map_to_granger_test)
 export(motion_gram)
 export(periodicity)
+export(plot_average_power)
+export(plot_coherence)
+export(plot_cross_spectrum)
 export(plot_history_xy)
+export(plot_influence_diagram)
+export(plot_power_spectrum)
 export(specgram_plot)
 export(splice_time)
 export(velocity_dp)
