--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: movementsync
 Type: Package
-Title: Analysis and Visualisation of Synchronisation of Music Onset and Video Data
+Title: Analysis and Visualisation of Musical Audio and Video Data
 Version: 0.1.0
 Author: person("Tuomas", "Eerola", email = "tuomas.eerola@durham.ac.uk", role = c("aut", "cre"))
 Description: This package helps to calculate and visualise video and audio data from an ensemble of musical players.
@@ -9,6 +9,7 @@ Encoding: UTF-8
 LazyData: true
 Imports:
     signal,
+    WaveletComp,
     zoo,
     dplyr,
     tidyr,
@@ -17,3 +18,4 @@ Imports:
     ggtext,
     ggplot2
 RoxygenNote: 7.1.1
+Roxygen: list(markdown = TRUE)
