Added granger network diagram

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(autoplot,PeriodicityView)
 S3method(autoplot,SplicedView)
 S3method(autoplot,View)
 S3method(plot,Duration)
+S3method(plot,GrangerInteraction)
 S3method(plot,Metre)
 S3method(plot,OnsetsSelected)
 S3method(plot,View)
@@ -23,6 +24,7 @@ S3method(summary,Metre)
 S3method(summary,OnsetsSelected)
 S3method(summary,Recording)
 S3method(summary,View)
+S3method(summary,analyze.wavelet)
 export(analyze_coherency)
 export(analyze_wavelet)
 export(apply_filter)
@@ -34,6 +36,7 @@ export(distribution_dp)
 export(get_data_points)
 export(get_duration_annotation_data)
 export(get_filtered_views)
+export(get_granger_interactions)
 export(get_joined_view)
 export(get_metre_data)
 export(get_onsets_selected_data)
@@ -47,12 +50,15 @@ export(granger_test)
 export(map_to_granger_test)
 export(motion_gram)
 export(periodicity)
+export(plot_average_coherency)
 export(plot_average_power)
 export(plot_coherence)
 export(plot_cross_spectrum)
 export(plot_history_xy)
 export(plot_influence_diagram)
+export(plot_phase_difference)
 export(plot_power_spectrum)
+export(plot_sel_phases)
 export(specgram_plot)
 export(splice_time)
 export(velocity_dp)
