Added extra splice_time functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(autolayer,Duration)
 S3method(autolayer,Metre)
 S3method(autolayer,OnsetsSelected)
+S3method(autoplot,Duration)
 S3method(autoplot,GrangerTime)
 S3method(autoplot,Metre)
 S3method(autoplot,OnsetsSelected)
@@ -15,6 +16,7 @@ S3method(plot,Metre)
 S3method(plot,OnsetsSelected)
 S3method(plot,View)
 S3method(splice_time,Duration)
+S3method(splice_time,Metre)
 S3method(splice_time,View)
 S3method(splice_time,list)
 S3method(split,SplicedView)
@@ -48,6 +50,8 @@ export(get_spliced_view)
 export(granger_test)
 export(map_to_granger_test)
 export(motion_gram)
+export(ms_grangertest1)
+export(ms_grangertest2)
 export(periodicity)
 export(plot_average_coherency)
 export(plot_average_power)
