Added sampling function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ export(plot_influence_diagram)
 export(plot_phase_difference)
 export(plot_power_spectrum)
 export(plot_sel_phases)
+export(sample_spliced_views)
 export(specgram_plot)
 export(splice_time)
 export(velocity_dp)
