--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,12 +3,14 @@ Type: Package
 Title: Analysis and Visualisation of Musical Audio and Video Data
 Version: 0.1.0
 Author: person("Tuomas", "Eerola", email = "tuomas.eerola@durham.ac.uk", role = c("aut", "cre"))
-Description: This package helps to calculate and visualise video and audio data from an ensemble of musical players.
+Description: This package helps to analyse and visualise video and audio data from an ensemble of musical players.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
+    lmtest,
     igraph,
+    rlang,
     signal,
     WaveletComp,
     zoo,
@@ -16,7 +18,6 @@ Imports:
     tidyr,
     hms,
     gridExtra,
-    ggtext,
     ggplot2
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
