Added overlapping splice check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,8 @@ export(get_raw_views)
 export(get_recording)
 export(get_spliced_view)
 export(granger_test)
+export(is_splice_overlapping)
+export(is_valid_splice)
 export(map_to_granger_test)
 export(motion_gram)
 export(ms_grangertest1)
@@ -62,7 +64,7 @@ export(plot_influence_diagram)
 export(plot_phase_difference)
 export(plot_power_spectrum)
 export(plot_sel_phases)
-export(sample_spliced_views)
+export(sample_time_spliced_views)
 export(specgram_plot)
 export(splice_time)
 export(velocity_dp)
