Scripted sampling methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(is_splice_overlapping)
 export(is_valid_splice)
 export(map_to_granger_test)
 export(motion_gram)
+export(ms_condgrangertest)
 export(ms_grangertest1)
 export(ms_grangertest2)
 export(periodicity)
