Moved test folder to tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(analyze_coherency)
 export(analyze_wavelet)
 export(apply_filter)
 export(apply_filter_sgolay)
+export(apply_summary_spliceview)
 export(autolayer)
 export(autoplot)
 export(distribution_dp)
@@ -41,6 +42,7 @@ export(get_granger_interactions)
 export(get_joined_view)
 export(get_metre_data)
 export(get_onsets_selected_data)
+export(get_processed_onsets)
 export(get_processed_view)
 export(get_raw_optflow_view)
 export(get_raw_view)
@@ -66,6 +68,7 @@ export(plot_phase_difference)
 export(plot_power_spectrum)
 export(plot_sel_phases)
 export(sample_time_spliced_views)
+export(sapply_summary_spliceview)
 export(specgram_plot)
 export(splice_time)
 export(velocity_dp)
