--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,3 +21,6 @@ Imports:
     ggplot2
 RoxygenNote: 7.2.2
 Roxygen: list(markdown = TRUE)
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
