--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(plot,OnsetsSelected)
 S3method(plot,View)
 S3method(splice_time,Duration)
 S3method(splice_time,Metre)
+S3method(splice_time,OnsetsDifference)
 S3method(splice_time,View)
 S3method(splice_time,list)
 S3method(split,SplicedView)
@@ -29,11 +30,15 @@ S3method(summary,View)
 S3method(summary,analyze.wavelet)
 export(analyze_coherency)
 export(analyze_wavelet)
+export(apply_column_spliceview)
 export(apply_filter)
 export(apply_filter_sgolay)
-export(apply_summary_spliceview)
+export(apply_segment_spliceview)
 export(autolayer)
 export(autoplot)
+export(ave_cross_power_spliceview)
+export(ave_power_spliceview)
+export(difference_onsets)
 export(distribution_dp)
 export(get_data_points)
 export(get_duration_annotation_data)
@@ -42,7 +47,6 @@ export(get_granger_interactions)
 export(get_joined_view)
 export(get_metre_data)
 export(get_onsets_selected_data)
-export(get_processed_onsets)
 export(get_processed_view)
 export(get_raw_optflow_view)
 export(get_raw_view)
@@ -51,7 +55,6 @@ export(get_recording)
 export(get_spliced_view)
 export(granger_test)
 export(is_splice_overlapping)
-export(is_valid_splice)
 export(map_to_granger_test)
 export(motion_gram)
 export(ms_condgrangertest)
@@ -67,10 +70,14 @@ export(plot_influence_diagram)
 export(plot_phase_difference)
 export(plot_power_spectrum)
 export(plot_sel_phases)
+export(pull_segment_spliceview)
+export(sample_ave_power_spliceview)
+export(sample_splice)
 export(sample_time_spliced_views)
-export(sapply_summary_spliceview)
+export(sapply_column_spliceview)
 export(specgram_plot)
 export(splice_time)
+export(summary_onsets)
 export(velocity_dp)
 export(xlim_duration)
 importFrom(ggplot2,autolayer)
