Added function to clip splice

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,12 @@ export(apply_segment_spliceview)
 export(autolayer)
 export(autoplot)
 export(ave_cross_power_spliceview)
+export(ave_power_over_samples)
 export(ave_power_spliceview)
+export(clip_splice)
+export(compare_ave_power1)
+export(compare_avg_cross_power2)
+export(compare_avg_power2)
 export(difference_onsets)
 export(distribution_dp)
 export(get_data_points)
@@ -52,6 +57,7 @@ export(get_raw_optflow_view)
 export(get_raw_view)
 export(get_raw_views)
 export(get_recording)
+export(get_spliced_onsets)
 export(get_spliced_view)
 export(granger_test)
 export(is_splice_overlapping)
@@ -71,14 +77,17 @@ export(plot_phase_difference)
 export(plot_power_spectrum)
 export(plot_sel_phases)
 export(pull_segment_spliceview)
+export(sample_ave_cross_power_spliceview)
 export(sample_ave_power_spliceview)
-export(sample_splice)
+export(sample_gap_splice)
+export(sample_offset_splice)
 export(sample_time_spliced_views)
 export(sapply_column_spliceview)
 export(specgram_plot)
 export(splice_time)
 export(summary_onsets)
 export(velocity_dp)
+export(visualise_sample_splices)
 export(xlim_duration)
 importFrom(ggplot2,autolayer)
 importFrom(ggplot2,autoplot)
