Added set operations on splices to package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,11 +57,11 @@ export(get_raw_optflow_view)
 export(get_raw_view)
 export(get_raw_views)
 export(get_recording)
-export(get_spliced_onsets)
 export(get_spliced_view)
 export(granger_test)
 export(is_splice_overlapping)
 export(map_to_granger_test)
+export(merge_splice)
 export(motion_gram)
 export(ms_condgrangertest)
 export(ms_grangertest1)
