Added 1 min of sample data to package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,7 @@ export(apply_segment_spliceview)
 export(autolayer)
 export(autoplot)
 export(ave_cross_power_spliceview)
-export(ave_power_over_samples)
+export(ave_power_over_splices)
 export(ave_power_spliceview)
 export(clip_splice)
 export(compare_ave_power1)
@@ -57,6 +57,7 @@ export(get_raw_optflow_view)
 export(get_raw_view)
 export(get_raw_views)
 export(get_recording)
+export(get_sample_recording)
 export(get_spliced_view)
 export(granger_test)
 export(is_splice_overlapping)
