Updated sample data set

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(difference_onsets)
 export(distribution_dp)
 export(get_data_points)
 export(get_duration_annotation_data)
+export(get_feature_data)
 export(get_filtered_views)
 export(get_granger_interactions)
 export(get_joined_view)
