Use package to run test scripts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ S3method(summary,OnsetsSelected)
 S3method(summary,Recording)
 S3method(summary,View)
 S3method(summary,analyze.wavelet)
+S3method(summary,sel.phases)
 export(analyze_coherency)
 export(analyze_wavelet)
 export(apply_column_spliceview)
@@ -77,6 +78,7 @@ export(plot_history_xy)
 export(plot_influence_diagram)
 export(plot_phase_difference)
 export(plot_power_spectrum)
+export(plot_roll_resultant_length)
 export(plot_sel_phases)
 export(pull_segment_spliceview)
 export(sample_ave_cross_power_spliceview)
