Tidied package structure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(get_joined_view)
 export(get_metre_data)
 export(get_onsets_selected_data)
 export(get_processed_view)
+export(get_processed_views)
 export(get_raw_optflow_view)
 export(get_raw_view)
 export(get_raw_views)
