--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: movementsync
 Type: Package
 Title: Analysis and Visualisation of Musical Audio and Video Data
 Version: 0.1.0
-Author: person("Tuomas", "Eerola", email = "tuomas.eerola@durham.ac.uk", role = c("aut", "cre"))
+Authors@R: person("Tuomas", "Eerola", email = "tuomas.eerola@durham.ac.uk", role = c("aut", "cre"))
 Description: This package helps to analyse and visualise video and audio data from an ensemble of musical players.
 License: MIT + file LICENSE
 Encoding: UTF-8
