Updated wavelet functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(get_feature_data)
 export(get_filtered_views)
 export(get_granger_interactions)
 export(get_joined_view)
+export(get_local_max_average_power)
 export(get_metre_data)
 export(get_onsets_selected_data)
 export(get_processed_view)
@@ -76,12 +77,14 @@ export(plot_average_coherency)
 export(plot_average_power)
 export(plot_coherence)
 export(plot_cross_spectrum)
+export(plot_cwt_energy)
 export(plot_history_xy)
 export(plot_influence_diagram)
 export(plot_phase_difference)
 export(plot_power_spectrum)
 export(plot_roll_resultant_length)
 export(plot_sel_phases)
+export(plot_wt_energy)
 export(pull_segment_spliceview)
 export(sample_ave_cross_power_spliceview)
 export(sample_ave_power_spliceview)
