Included man pages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ S3method(autoplot,Duration)
 S3method(autoplot,GrangerTime)
 S3method(autoplot,Metre)
 S3method(autoplot,OnsetsSelected)
-S3method(autoplot,PeriodicityView)
+S3method(autoplot,SpectralDensityView)
 S3method(autoplot,SplicedView)
 S3method(autoplot,View)
 S3method(plot,Duration)
@@ -72,7 +72,6 @@ export(motion_gram)
 export(ms_condgrangertest)
 export(ms_grangertest1)
 export(ms_grangertest2)
-export(periodicity)
 export(plot_average_coherency)
 export(plot_average_power)
 export(plot_coherence)
@@ -93,6 +92,7 @@ export(sample_offset_splice)
 export(sample_time_spliced_views)
 export(sapply_column_spliceview)
 export(specgram_plot)
+export(spectral_density)
 export(splice_time)
 export(summary_onsets)
 export(velocity_dp)
