Added ave power on segments plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ export(map_to_granger_test)
 export(merge_splice)
 export(motion_gram)
 export(ms_condgrangertest)
+export(ms_condgrangertest2)
 export(ms_grangertest1)
 export(ms_grangertest2)
 export(plot_average_coherency)
