--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,10 +38,14 @@ export(apply_filter_sgolay)
 export(apply_segment_spliceview)
 export(autolayer)
 export(autoplot)
+export(ave_cross_power_over_splices)
 export(ave_cross_power_spliceview)
 export(ave_power_over_splices)
 export(ave_power_spliceview)
+export(calculate_ave_cross_power1)
+export(calculate_ave_power1)
 export(clip_splice)
+export(compare_ave_cross_power1)
 export(compare_ave_power1)
 export(compare_avg_cross_power2)
 export(compare_avg_power2)
@@ -70,7 +74,6 @@ export(map_to_granger_test)
 export(merge_splice)
 export(motion_gram)
 export(ms_condgrangertest)
-export(ms_condgrangertest2)
 export(ms_grangertest1)
 export(ms_grangertest2)
 export(plot_average_coherency)
