Added OSF data functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(get_joined_view)
 export(get_local_max_average_power)
 export(get_metre_data)
 export(get_onsets_selected_data)
+export(get_osf_recording)
 export(get_processed_view)
 export(get_processed_views)
 export(get_raw_optflow_view)
@@ -70,12 +71,15 @@ export(get_sample_recording)
 export(get_spliced_view)
 export(granger_test)
 export(is_splice_overlapping)
+export(list_local_recordings)
+export(list_osf_recordings)
 export(map_to_granger_test)
 export(merge_splice)
 export(motion_gram)
 export(ms_condgrangertest)
 export(ms_grangertest1)
 export(ms_grangertest2)
+export(open_movementsync_data)
 export(plot_average_coherency)
 export(plot_average_power)
 export(plot_coherence)
