--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,7 +60,7 @@ export(get_joined_view)
 export(get_local_max_average_power)
 export(get_metre_data)
 export(get_onsets_selected_data)
-export(get_osf_recording)
+export(get_osf_recordings)
 export(get_processed_view)
 export(get_processed_views)
 export(get_raw_optflow_view)
@@ -71,7 +71,6 @@ export(get_sample_recording)
 export(get_spliced_view)
 export(granger_test)
 export(is_splice_overlapping)
-export(list_local_recordings)
 export(list_osf_recordings)
 export(map_to_granger_test)
 export(merge_splice)
@@ -79,6 +78,7 @@ export(motion_gram)
 export(ms_condgrangertest)
 export(ms_grangertest1)
 export(ms_grangertest2)
+export(open_local_recordings)
 export(open_movementsync_data)
 export(plot_average_coherency)
 export(plot_average_power)
