Updated walk-through structure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export(ms_grangertest1)
 export(ms_grangertest2)
 export(open_local_recordings)
 export(open_movementsync_data)
+export(open_walk_throughs)
 export(plot_average_coherency)
 export(plot_average_power)
 export(plot_coherence)
