Added pairs helper functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(get_local_max_average_power)
 export(get_metre_data)
 export(get_onsets_selected_data)
 export(get_osf_recordings)
+export(get_pair_columns)
 export(get_processed_view)
 export(get_processed_views)
 export(get_raw_optflow_view)
@@ -81,6 +82,7 @@ export(ms_grangertest2)
 export(open_local_recordings)
 export(open_movementsync_data)
 export(open_walk_throughs)
+export(pairs_title)
 export(plot_average_coherency)
 export(plot_average_power)
 export(plot_coherence)
